# scribro

./: Cargo.toml  LICENSE-MIT  README.md  package-lock.json  package.json  tailwind.config.js
posts/: hello-world-2.md  hello-world.md
src/: app.rs  components.rs  lib.rs  main.rs  pages.rs  utils.rs
src/components/: Header.rs  Page.rs  PostContent.rs  admin_console.rs  comment.rs  comments.rs  mod.rs  post.rs  tags.rs
src/pages/: AboutMe.rs  Home.rs  Post.rs  Posts.rs
style/: output.css  output.scss
